--- a/css/brand.css
+++ b/css/brand.css
@@ -168,7 +168,9 @@ nav>ul>li:hover>a {
   background-size: cover;
 }
 /* best menu slide */
-
+.best_menu .inner {
+  overflow-x: hidden;
+}
 .best_menu h2 {
   text-align: center;
   margin-top: 100px;
@@ -355,6 +357,7 @@ nav>ul>li:hover>a {
 .notice .inner {
   display: flex;
   justify-content: space-around;
+  overflow-x: hidden;
 }
 .notice h2 {
   margin-top: 100px;
@@ -546,6 +549,7 @@ footer .gold {
   /* best menu */
   .best_menu h2 {
     margin-top: 100px;
+    font-size: 3rem;
   }
   .best_menu h3 {
     margin-bottom: 100px;
@@ -584,7 +588,7 @@ footer .gold {
     max-width: 230px;
   }
   .franchise h2 {
-    font-size: 2.5rem;
+    font-size: 3rem;
   }
   .franchise h3 {
     font-size: 1.5rem;
@@ -642,7 +646,7 @@ footer .gold {
     margin-top: 50px;
     margin-bottom: 25px;
     text-align: center;
-    font-size: 2.5rem;
+    font-size: 3rem;
   }
   .notice h3 {
     display: none;
