--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,13 @@ body {
   background-size: cover;
   transition: .3s;
 }
+.left>a , .right>a {
+  width: 100%;
+  height: 100vh;
+}
+.left>a , .right>a:hover {
+  cursor: pointer;
+}
 .text {
   padding: 50px;
   width: 500px;
