--- a/css/startUp.css
+++ b/css/startUp.css
@@ -155,11 +155,11 @@ nav>ul>li:hover>a {
   display: flex;
   flex-direction: column;
   position: relative;
-  margin-bottom: 60px;
+  margin-bottom: 100px;
 }
 .startUp h2 {
   font-size: 5rem;
-  margin-top: 60px;
+  margin-top: 100px;
   margin-bottom: 40px;
 }
 .startUp_menu {
@@ -361,6 +361,7 @@ footer .gold {
     padding: 50px;
   }
   .startUp h2 {
+    margin-top: 0;
     font-size: 3rem;
   }
   .startUp .agree h3, .user h3 {
